--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,10 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 img{
     max-width: 100%;
 }
+
 /* COMMON */
 html{
     scroll-behavior: smooth;
@@ -15,33 +15,26 @@ html{
 body{
     font-family: 'Open Sans', sans-serif;
 }
+
+/* container and columns */
 .big-cont{
     width: 70%;
     max-width: 1200px;
-    margin: 0 auto;
-    
+    margin: 0 auto;   
 }
 .small-cont{
     width: 60%;
     max-width: 1000px;
     margin: 0 auto;
 }
-
 .leftcol{
     width: 60%;
-
-    /* debug */
-    background-color: violet;
-    height: 200px;
 }
 .rightcol{
     width: 40%;
-
-    /* debug */
-    background-color: palegreen;
-    height: 200px;
 }
 
+/* anchor and lists styles */
 a{
     text-decoration: none;
     color: black;
@@ -50,16 +43,16 @@ a{
 a:hover{
     cursor: pointer;
 }
-
 li{
     list-style-type: none;
 }
 
-/* utilities */
+/* UTILITIES */
+
+/* flex */
 .flex{
     display: flex;
 }
-
 .flexcol{
     display: flex;
     flex-direction: column;
@@ -79,28 +72,31 @@ li{
 .space{
     justify-content: space-between;
 }
-
 .grow{
     flex-grow: 1;
 }
 
+/* variables */
 :root{
     --azure: #B4D0E7;
     --blue: #0061FF;
     --bordeaux: #61082B;
     --header-h: 40px;
 }
+
+/* font colors and button looks */
 .button{
     background-color: var(--blue);
 }
-
 .white{
     color: white;
 }
-/* debug utilities */
+/* debug */
 .border{
     border: 2px solid black;
 }
+
+
 /* HEADER */
 header{
     height: 50px;
@@ -110,7 +106,6 @@ header{
     z-index: 10;
     background-color: white;
 }
-
 .header-col img{
     width: 100px;
     align-self: center;
@@ -129,7 +124,7 @@ header{
 
 /* MAIN */
 
-/* LANDING */
+/* LANDING-HERO */
 .landing{
     background-color: var(--azure);
     padding-top: var(--header-h);
@@ -171,8 +166,7 @@ header{
 }
 
 
-/* PLANS */
-
+/* PRICES SECTION */
 .billing{   
     padding-top: 120px;
 }
@@ -183,6 +177,7 @@ header{
     font-size: 0.8rem;
     padding: 20px 0;
 }
+/* radiobutton */
 input[type="radio"] {
     vertical-align: middle;
     accent-color: var(--blue);
@@ -191,18 +186,17 @@ input[type="radio"] {
     padding-right: 50px;
 }
 
-/* MAINPLANS */
+/* main containers */
 .main_plans{
     margin-bottom: 20px;
     gap: 20px;
 }
-
 .plan_card{
     font-size: 0.7rem;
     width: calc(100% / 3);
 }
 
-/* upper */
+/* plans-upper */
 .plan_type{
     text-align: center;
     padding: 5px;
@@ -210,7 +204,7 @@ input[type="radio"] {
     border-bottom: hidden;
 }
 
-/* central */
+/* plans-central */
 .plan_description{
     padding: 20px 15px;
     border: 1px solid lightgray;
@@ -227,15 +221,14 @@ input[type="radio"] {
     gap: 10px;
 }
 
-/*  central-list */
+/* plans-central_list */
 .features li{
     padding-bottom: 15px;
     padding-left: 15px;
     text-align: left;
     position: relative;
 }
-
-/* non so se tenere */
+/* keep? */
 .features ul{
     max-height: 185px;
 }
@@ -277,7 +270,7 @@ input[type="radio"] {
     top: 3px;
 }
 
-/* trynow-shopnow */
+/* plans-trynow_shopnow */
 .trynow{
     margin-top: 25px;
     padding: 5px 10px; 
@@ -290,7 +283,7 @@ input[type="radio"] {
     color: var(--blue);
 }
 
-/*bottom */
+/* plans bottom list*/
 .plan_highlights h5{
     font-size: 0.7rem;
     padding: 20px 0;
@@ -301,7 +294,8 @@ input[type="radio"] {
     padding-left: 15px;
     text-align: left;
 }
-/* custom-icons bottom */
+
+/* pans bottom-custom-icons*/
 .plan_highlights li::before{
     font-family: "Font Awesome 5 Free";
     content: "\f00c";
@@ -312,7 +306,8 @@ input[type="radio"] {
     left: 0;
     top: 2px;
 }
-/* custom hr */
+
+/* plans custom hr */
 .line{
     width: 20%;
     border: 0.5px solid lightgray;
@@ -334,6 +329,29 @@ input[type="radio"] {
 .en-l-col{
     width: 70%;
 }
+
+/* CONTACT US SECTION */
+.contactus{
+    margin-top: 90px;
+}
+.photo_adv img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: left bottom;
+}
+.contact{
+    padding: 25px;
+}
+.contact>*{
+    padding-bottom: 20px;
+}
+.contact a{
+    border: 1px solid black;
+    padding: 10px;
+}
+
+
 /* DESCRIPTION-SECTION */
 .disclaimer{
     /* debug */
