--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@ li{
 .white{
     color: white;
 }
+
 /* padding */
 .p-y-20{
     padding: 20px 0;
@@ -111,6 +112,7 @@ li{
 .p-b-20{
     padding-bottom: 20px;
 }
+
 /* font-size */
 .smaller_font{
     font-size: 0.7rem;
@@ -134,6 +136,8 @@ header{
 .button a{
     padding: 4px;
 }
+
+/* underline effect */
 .underline{
     display: inline-block;
     position: relative;
@@ -202,6 +206,7 @@ header{
 .bill_select {
     font-size: 0.8rem;
 }
+
 /* radiobutton */
 input[type="radio"] {
     vertical-align: middle;
@@ -210,6 +215,7 @@ input[type="radio"] {
 .radio{
     padding-right: 50px;
 }
+
 /* main containers */
 .main_plans{
     margin-bottom: 20px;
@@ -218,6 +224,7 @@ input[type="radio"] {
 .plan_card{
     width: calc(100% / 3);
 }
+
 /* plans-upper */
 .plan_type{
     text-align: center;
@@ -225,6 +232,7 @@ input[type="radio"] {
     border: 1px solid lightgray;
     border-bottom: hidden;
 }
+
 /* plans-central */
 .plan_description{
     padding: 20px 15px;
@@ -241,6 +249,7 @@ input[type="radio"] {
     padding-bottom: 25px;
     gap: 10px;
 }
+
 /* plans-central_list */
 .features li{
     padding-bottom: 15px;
@@ -248,6 +257,7 @@ input[type="radio"] {
     text-align: left;
     position: relative;
 }
+
 /* custom icons central-list */
 .features li:nth-child(1)::before{
     font-family: "Font Awesome 5 Free";
@@ -285,6 +295,7 @@ input[type="radio"] {
     left: -1px;
     top: 3px;
 }
+
 /* plans-trynow_shopnow */
 .trynow{
     margin-top: 25px;
@@ -294,6 +305,7 @@ input[type="radio"] {
     text-decoration: underline;
     color: var(--blue);
 }
+
 /* plans bottom list*/
 .plan_highlights li{
     position: relative;
@@ -301,6 +313,7 @@ input[type="radio"] {
     padding-left: 15px;
     text-align: left;
 }
+
 /* pans bottom-custom-icons*/
 .plan_highlights li::before{
     font-family: "Font Awesome 5 Free";
@@ -312,6 +325,7 @@ input[type="radio"] {
     left: 0;
     top: 2px;
 }
+
 /* plans custom hr */
 .line{
     width: 20%;
@@ -372,8 +386,8 @@ input[type="radio"] {
     text-decoration: underline;
     color: var(--blue);
 }
-/* brand ambassadors */
 
+/* brand ambassadors */
 .brand-card-l, .brand-card-r, .brand-card{
     width: calc(100%/3);
     aspect-ratio: 1 / 1;
@@ -490,12 +504,10 @@ input[type="radio"] {
 footer{
     background-color: black;
 }
-
 .links{
     width: calc(70% / 5);
     padding: 50px 0;
 }
-
 .links li{
     padding-bottom: 10px;
 }
